<?xml version="1.0"?>
<package format="2">
  <name>quest3_webxr_ros1</name>
  <version>1.0.0</version>
  <description>Oculus Quest 3 WebXR integration with ROS1 using TF and topics</description>
  
  <maintainer email="your-email@example.com">Your Name</maintainer>
  <license>MIT</license>
  
  <author email="your-email@example.com">Your Name</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  
  <test_depend>roslib</test_depend>
  <test_depend>rospy</test_depend>
  <test_depend>rostest</test_depend>
</package>
